--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MessengerApp">
-        <activity android:name=".MainActivity">
+        <activity android:name=".pages.home.HomeActivity"></activity>
+        <activity android:name=".pages.login.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
